Added sample app.config

--- a/OpenPhotosynth.RichClient/OpenPhotosynth.RichClient.csproj
+++ b/OpenPhotosynth.RichClient/OpenPhotosynth.RichClient.csproj
@@ -167,7 +167,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
+    <None Include="Sample-App.config">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
